modified technologies section to fit various screen resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,8 +153,11 @@ nav ul {
 
 .tech-imgs {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
-  padding: 50px 300px;
+  width: 70%;
+  margin: 0 auto;
+  padding: 50px 0;
 }
 
 #vs-code,
