--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,12 @@ html {
   scroll-behavior: smooth;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -53,6 +59,11 @@ nav ul {
   color: #ffd60a;
 }
 
+nav ul li:hover {
+  transform: scale(1.2);
+  transition: 500ms;
+}
+
 .header-cta-resume {
   display: flex;
   justify-content: center;
@@ -62,6 +73,11 @@ nav ul {
   background: #ffc300;
   border: none;
   border-radius: 5px;
+}
+
+.header-cta-resume:hover {
+  transform: scale(1.2);
+  transition: 500ms;
 }
 
 .header-cta-resume a {
