--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,11 @@ nav ul li:hover {
   border-radius: 25px;
 }
 
+.header-cta:hover {
+  transform: scale(1.2);
+  transition: 500ms;
+}
+
 .header-cta a {
   text-decoration: none;
   font-family: "Poppins", sans-serif;
@@ -174,6 +179,11 @@ nav ul li:hover {
   width: 70%;
   margin: 0 auto;
   padding: 50px 0;
+}
+
+.tech-imgs img:hover {
+  transform: scale(1.2);
+  transition: 300ms;
 }
 
 #vs-code,
@@ -215,6 +225,12 @@ hr {
   height: 500px;
   box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+}
+
+.card-left:hover,
+.card-right:hover {
+  transform: scale(1.005);
+  transition: 500ms;
 }
 
 .card-right .project-logo {
@@ -266,6 +282,12 @@ hr {
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
+}
+
+.btn-card-left:hover,
+.btn-card-right:hover {
+  transform: scale(1.2);
+  transition: 500ms;
 }
 
 .btn-card-left a {
@@ -330,6 +352,11 @@ hr {
   margin: 0 20px;
 }
 
+.social-icons img:hover {
+  transform: scale(1.2);
+  transition: 500ms;
+}
+
 footer {
   background: #003566;
   font-family: "Poppins", sans-serif;
@@ -352,6 +379,11 @@ footer {
   height: 45px;
   border: 2px solid #ffd60a;
   border-radius: 25px;
+}
+
+.btn-link:hover {
+  transform: scale(1.2);
+  transition: 500ms;
 }
 
 .btn-link a {
