--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,11 @@ nav ul {
   color: #ffd60a;
 }
 
+nav ul a {
+  text-decoration: none;
+  color: #ffd60a;
+}
+
 nav ul li:hover {
   transform: scale(1.2);
   transition: 500ms;
